--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,22 @@
     "@apollo/react-hooks": "^4.0.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.28",
+    "@types/styled-components": "^5.1.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
     "graphql": "^15.5.0",
     "isomorphic-unfetch": "^3.1.0",
+    "isomorphic-ws": "^4.0.1",
     "next": "^10.2.1-canary.8",
     "next-with-apollo": "^5.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "use-debounce": "^6.0.1"
+    "styled-components": "^5.3.0",
+    "subscriptions-transport-ws": "^0.9.18",
+    "use-debounce": "^6.0.1",
+    "ws": "^7.4.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
