--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@polkadot/api": "^4.9.2",
     "@sora-substrate/type-definitions": "^1.3.4",
+    "bignumber.js": "^9.0.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
